tests/contract_testcases/substrate/inheritance/base_contract_on_constructor_03.sol

        abstract contract apex {
            constructor() oosda public {

            }
        }
// ---- Expect: diagnostics ----
// error: 3:27-32: 'oosda' not found
// warning: 3:33-39: 'public': visibility for constructors is ignored
